Workrave NEWS -- history of user-visible changes. 26 March 2023
Copyright (C) 2001-2023 Rob Caelers, Raymond Penners, Ray Satiro
See the end for copying conditions.

Please report Workrave bug reports. Visit our bug tracker located at:
https://github.com/rcaelers/workrave/issues

* Workrave 1.11.0-beta.6

** Fix preferences icons on Linux
** Improve High-DPI icons on Windows
** Support GNOME Shell 44 (#471, Jeremy Bicha)
** On Windows, Workrave now raises the main window when clicking on the pinned
   application icon.
** Bug fixes:
   - Fix "Start Workrave on logon" (#462)
   - Fix Assertion 'GDK_IS_DISPLAY (display)' failed (#472)
   - Several build fixes (#468, #469, #473, #474, wojnilowicz)
   - Status window is no longer displayed when not configured (#444)
** Updated Translations:
   - Updated Polish translation (#465, ChuckMichael)

* Workrave 1.11.0-beta.5

** Added preferences for the experimental auto-update feature
** Preliminary support for custom user defined exercises
** Redesigned the preferences dialog
** Bug fixes:
   - Fixed language selection on Windows
   - Fixed special characters in the Windows status icon menu
   - Fixed issue where sound could not be disabled (#443)
   - Fixed issue where the status window could not be disabled (#444)
   - The installer now removes files no longer required (#446)

* Workrave 1.11.0-beta.2

** Updates Polish translation (#423 by ChuckMichael)
** Update Dutch translation (#437 by WKobes)
** Support GNOME Shell 43 (#430 by Jeremy Bicha)
** Add option to force the use of the X11 Gtk backend on Wayland
** Experimental auto-update feature
** Bug fixes:
   - Fix 'Lock screen' functionality from rest break window
   - Fix showing natural break window when screen is unlocked

* Workrave 1.11.0-alpha.3

** Fix GNOME shell applet loading on Ubuntu Focal

* Workrave 1.11.0-alpha.2

** Networking suport was removed
** Focus assist settings moved from menu to preferences