@@ -20,8 +20,8 @@ macro_ensure_out_of_source_build(
  )
 
 # Set Workrave version
-set (WORKRAVE_VERSION "1.11.0-beta.5" )
-set (WORKRAVE_RESOURCE_VERSION "1,10,999,105" )
+set (WORKRAVE_VERSION "1.11.0-beta.6" )
+set (WORKRAVE_RESOURCE_VERSION "1,10,999,106" )
 set (WORKRAVE_CHANNEL "beta" )
 
 set (CMAKE_BUILD_TYPE_INIT "Release")
